# codename-score-backend

./: output.csv  pyproject.toml
config/: settings.py  urls.py
regular_games/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
regular_games/migrations/: 0001_initial.py  0002_regulargameseed.py
score/: admin.py  models.py  serializers.py  urls.py  views.py
score/migrations/: 0001_initial.py  0002_alter_regulargamescore_first_and_more.py  0002_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_join_date.py
